--- a/src/app/home-particulier/home-particulier.component.html
+++ b/src/app/home-particulier/home-particulier.component.html
@@ -22,9 +22,17 @@
                 </button>
 
                 <!-- Bouton parrainage -->
-                <button class="login-btn" style="background-color: #e7f5f2;">
-                    ❤️ Faire une demande de parrainage
-                </button>
+              
+
+<button 
+  class="login-btn" 
+  style="background-color: #e7f5f2;"
+  routerLink="/register-parraineur"
+>
+  ❤️ Faire une demande de parrainage
+</button>
+
+
             </div>
         </main>
     </div>
